--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.18.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
